# lexus-ad-analysis

./: .gitignore  advertising_analysis.ipynb  docker-compose.yml  pyproject.toml
report/: lexus_ad_report.md  lexus_executive_summary.md  lexus_technical_report.md  sql_study_guide.md  sql_workflow_guide.md
