[project]
name = "my-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "db-dtypes>=1.5.0",
    "google-cloud-bigquery>=3.40.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=21.0.0",
    "sqlalchemy>=2.0.48",
]
